# icode-test

./: .env.example  README.md  pyproject.toml  requirements.txt
src/: config.py  database.py
src/cli/: cli.py  contracts_cli.py  depenpencies.py  flags.py  projects_cli.py  utils.py
src/contracts/: exceptions.py  models.py  schemas.py  validators.py
src/projects/: models.py  schemas.py  validators.py
src/repository/: __init__.py  contract_repository.py  project_repository.py  repository.py
src/services/: contracts.py  projects.py
src/utils/: __init__.py  base.py  depends.py  exceptions.py
